<resources>
    <string name="app_name">ScanMore</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Some Name</string>
    <string name="nav_header_subtitle">randomMail@mail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <integer name="viewfinder_border_width">4</integer>
    <integer name="viewfinder_border_length">60</integer>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="large_text">... ... </string>
    <string name="profile_name">Username</string>
    <string name="email">hej@conmore.se</string>
    <string name="location">Gothenburg</string>
    <string name="title_activity_shopping_list">ShoppingListActivity</string>

    <string name="card_header">NFN CARD</string>
    <string name="card_number_sample">XXXX XXXX XXXX XXXX</string>
    <string name="card_validity_label">VALID UPTO</string>
    <string name="card_validity_sample">MM/YY</string>
    <string name="card_name_sample">CARD HOLDER</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="card_holders_name">Card Holder\'s Name</string>
    <string name="card_number">Card Number</string>
    <string name="card_validity">Expires</string>
    <string name="card_cvv">CVV/CVC Number</string>

    <string name="dialog_delete_card">Are you sure you want to delete the active payment method?</string>
    <string name="dialog_no_payment">You currently have nothing to checkout!</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="ok">OK</string>

    <!-- Sign-up screen -->
    <string name="signup">Create an account</string>
    <string name="already_a_member">Already a member? <b>Sign in!</b></string>
    <string name="account">SIGNUP</string>

    <!-- Login screen -->
    <string name="not_a_member">Don\'t have an account? <b>Sign up!</b></string>
    <string name="welcome">Welcome!</string>
    <string name="login">LOGIN</string>

    <!-- Scan screen -->
    <string name="shopping_cart">Shopping Cart</string>

    <!-- Delete items dialog -->
    <string name="remove_products">Remove products</string>
    <string name="how_many_products">How many items would you like to remove?</string>
    <string name="avbryt">CANCEL</string>
    <string name="OK">OK</string>

    <!-- Checkout screen -->
    <string name="add_payment">ADD A NEW PAYMENT METHOD</string>
    <string name="total_price">Total price:</string>
    <string name="pay_with">Pay with</string>

    <!-- Swish screen -->
    <string name="mobile_number">Enter your mobile number:</string>
    <string name="submit">SUBMIT</string>
    <string name="swish_info">Tap Submit to connect the chosen Swish number to your account.</string>

    <!-- CreditCard screen -->
    <string name="next">NEXT</string>
</resources>
