<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".SwishActivity">

    <ImageView
        android:id="@id/swish_logo"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:src="@drawable/ic_swish_logo"
        android:layout_above="@id/phone_number_prompt"
        android:layout_below="@id/toolbar"
        android:padding="50dp"
        android:layout_centerVertical="true"/>

    <TextView
        android:id="@+id/phone_number_prompt"
        android:layout_above="@id/phone_number_input_wrapper"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/mobile_number"
        android:textSize="23sp"
        android:layout_marginBottom="10dp"
        android:textStyle="bold"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/phone_number_input_wrapper"
        android:layout_width="350dp"
        android:layout_height="70dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:textColorHint="@android:color/white"
        android:padding="0dp"
        android:gravity="center"
        android:background="@drawable/text_input_border">
        <EditText
            android:id="@+id/phone_number_input"
            android:digits="0123456789+"
            android:layout_width="320dp"
            android:layout_height="50dp"
            android:layout_marginBottom="10dp"
            android:inputType="phone"
            android:textAlignment="center"
            android:maxLength="10"
            android:textSize="38sp"
            android:background="@android:color/transparent"
            android:textColor="@color/secondary_text"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/submit_swish"
        android:layout_width="360dp"
        android:layout_centerHorizontal="true"
        android:layout_height="60dp"
        android:layout_marginBottom="20dp"
        android:layout_alignParentBottom="true"
        android:background="@android:color/white"
        android:text="@string/submit"
        android:textSize="18sp"
        android:textColor="@color/toolbar_color"/>

    <TextView
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/phone_number_input_wrapper"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/swish_info"
        android:textAlignment="center" />


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        app:titleTextColor="@android:color/white"
        android:background="@color/toolbar_color"
        android:minHeight="?attr/actionBarSize" />
</RelativeLayout>